# manrex

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: .gitignore  Cargo.toml  README.md  testing.rs
examples/src/: auth.rs  report.rs  search.rs  testing.rs
src/: auth.rs  de.rs  error.rs  lib.rs  ser.rs  types.rs  uuid.rs
src/client/: auth.rs  mod.rs  rate_limit.rs  request.rs
src/client/endpoints/: author.rs  chapter.rs  client.rs  cover.rs  custom_list.rs  manga.rs  mod.rs  ratings.rs  read_markers.rs  report.rs  scanlation_group.rs  settings.rs  statistics.rs  upload.rs  user.rs
src/model/: at_home.rs  author.rs  chapter.rs  client.rs  cover.rs  custom_list.rs  forum.rs  image.rs  manga.rs  mod.rs  rating.rs  report.rs  scanlation_group.rs  settings.rs  statistics.rs  upload.rs  user.rs
