[package]
name = "manrex"
version = "0.1.0"
edition = "2021"

[[example]]
name = "testing"
path = "examples/testing.rs"

[lib]
name = "manrex"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.39"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["client", "http1"] }
hyper-util = { version = "0.1.10", features = ["client", "http1", "tokio"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["net"] }
