[package]
name = "manrex"
version = "0.1.0"
edition = "2021"

[[example]]
name = "testing"
path = "examples/testing.rs"

[lib]
name = "manrex"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["net", "rt-multi-thread", "macros"] }
url = "2.5.4"

dotenvy = { version = "0.15.7", optional = true }
serde_json = "1.0.137"
dirs = "6.0.0"
serde_urlencoded = "0.7.1"

[features]
env = ["dep:dotenvy"]
