[package]
name = "manrex"
version = "0.1.0"
edition = "2021"

[lib]
name = "manrex"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["io-util"] }
tokio-util = { version = "0.7.13", features = ["io"] }

dotenvy = { version = "0.15.7", optional = true }
reqwest = { version = "0.12.12", features = ["json", "multipart", "stream"] }
url = "2.5.4"
dirs = "6.0.0"
bytes = "1.9.0"
chrono = "0.4.39"
base64 = "0.22.1"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_urlencoded = "0.7.1"
serde_json_path_to_error = "0.1.4"

strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
paste = "1.0.15"
futures-util = "0.3.31"

[features]
env = ["dep:dotenvy"]
