[package]
name = "manrex-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name="auth"
path="src/auth.rs"

[[bin]]
name="report"
path="src/report.rs"

[[bin]]
name="testing"
path="src/testing.rs"

[[bin]]
name="search"
path="src/search.rs"

[dependencies]
manrex = { path = "../", features=["env"] }
dialoguer = "0.11.0"
futures-util = "0.3.31"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
spinoff = "0.8.0"
async-channel = "2.3.1"
serde_json = "1.0.138"
